# DQN-Rainbow-Pixel-Control

./: .gitignore  README.md  cwpreport.cls  cwpreport2020.cls  main.tex  mujoco_test.py  pyproject.toml  train.py  wrapper_try.py
Report/: references.bib
configs/: hyperparameters.yml
notebooks/: dqn.ipynb
src/: agent.py  buffer.py  dqn.py  dqn_mujoco.py  wrappers.py
